--- a/qab/admin/package.json
+++ b/qab/admin/package.json
@@ -18,7 +18,8 @@
     "vue-navigation": "^1.1.4",
     "vue-router": "^3.1.3",
     "vue2-editor": "^2.10.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
