--- a/qab/admin/package.json
+++ b/qab/admin/package.json
@@ -13,6 +13,7 @@
     "css-loader": "^3.4.0",
     "echarts": "^4.5.0",
     "element-ui": "2.12.0",
+    "qrcode": "^1.4.4",
     "v-charts": "^1.19.0",
     "vue": "^2.6.10",
     "vue-navigation": "^1.1.4",
