--- a/qab/admin/package.json
+++ b/qab/admin/package.json
@@ -13,6 +13,7 @@
     "css-loader": "^3.4.0",
     "echarts": "^4.5.0",
     "element-ui": "2.12.0",
+    "file-saver": "^2.0.2",
     "qrcode": "^1.4.4",
     "v-charts": "^1.19.0",
     "vue": "^2.6.10",
@@ -20,7 +21,8 @@
     "vue-router": "^3.1.3",
     "vue2-editor": "^2.10.2",
     "vuex": "^3.0.1",
-    "wangeditor": "^3.1.1"
+    "wangeditor": "^3.1.1",
+    "xlsx": "^0.15.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
